{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 10,
  "lineage": "ad3175dc-f8f3-88ee-1549-af3f596f3f9a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "campus_ai_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d9a665f802ae6227",
            "arn": "arn:aws:ec2:us-east-2:463367047047:instance/i-06861268fd8310d3e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06861268fd8310d3e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "rosefaith",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b3175980dd0eaa1c",
            "private_dns": "ip-10-0-1-153.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.153",
            "public_dns": "ec2-3-139-69-17.us-east-2.compute.amazonaws.com",
            "public_ip": "3.139.69.17",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d14e49b3bfc66aa6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0da6dcd6944e53e89",
            "tags": {
              "Name": "campus-ai-ec2"
            },
            "tags_all": {
              "Name": "campus-ai-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0af4a191e4fda32c3"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.campus_ai_app",
            "aws_subnet.public_dev",
            "aws_vpc.campus_ai_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "campus_ai_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:463367047047:internet-gateway/igw-0f338b4adad69f25f",
            "id": "igw-0f338b4adad69f25f",
            "owner_id": "463367047047",
            "tags": {
              "Name": "campus-ai-dev-igw"
            },
            "tags_all": {
              "Name": "campus-ai-dev-igw"
            },
            "vpc_id": "vpc-023a8f5be06e69684"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.campus_ai_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:463367047047:route-table/rtb-04a92378d5efcd060",
            "id": "rtb-04a92378d5efcd060",
            "owner_id": "463367047047",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f338b4adad69f25f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "campus-ai-dev-public-rt"
            },
            "tags_all": {
              "Name": "campus-ai-dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-023a8f5be06e69684"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.campus_ai_dev",
            "aws_vpc.campus_ai_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e7d807368a467e2",
            "route_table_id": "rtb-04a92378d5efcd060",
            "subnet_id": "subnet-0da6dcd6944e53e89"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.campus_ai_dev",
            "aws_route_table.public_dev",
            "aws_subnet.public_dev",
            "aws_vpc.campus_ai_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "campus_ai_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:463367047047:security-group/sg-0af4a191e4fda32c3",
            "description": "Security group for Campus AI application",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0af4a191e4fda32c3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "campus-ai-dev-app",
            "name_prefix": "",
            "owner_id": "463367047047",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "campus-ai-dev-app-sg"
            },
            "tags_all": {
              "Name": "campus-ai-dev-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-023a8f5be06e69684"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.campus_ai_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:463367047047:subnet/subnet-0da6dcd6944e53e89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da6dcd6944e53e89",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "463367047047",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "campus-ai-dev-public"
            },
            "tags_all": {
              "Name": "campus-ai-dev-public"
            },
            "vpc_id": "vpc-023a8f5be06e69684"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.campus_ai_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "campus_ai_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:463367047047:vpc/vpc-023a8f5be06e69684",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-065198383d3f7d64b",
            "default_route_table_id": "rtb-058075377e6fd8d05",
            "default_security_group_id": "sg-09a5835b520947191",
            "dhcp_options_id": "dopt-0c0654a1c7560b005",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-023a8f5be06e69684",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-058075377e6fd8d05",
            "owner_id": "463367047047",
            "tags": {
              "Environment": "development",
              "Name": "campus-ai-dev",
              "Project": "campus-ai"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "campus-ai-dev",
              "Project": "campus-ai"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}